city is now editable for user

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,7 +34,7 @@
                 <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
               </div>
               <div class="form-group label-floating">
-                <label class="control-labe">
+                <label class="control-label">
                   <%= f.label :city, "Ville * (Les prochaines villes arrivent bientôt ;)" %>                                                                   
                 </label>
                 <br>
