add page legal, correction style in homepage and contact page

--- a/app/views/additional_views/contact.html.erb
+++ b/app/views/additional_views/contact.html.erb
@@ -34,21 +34,21 @@
                 <td class="text-center">     
                   <h4> <i class="fa fa-envelope-o mr-3"></i></h4>                                                 
                 </td>
-                <td class="text-left"><p>zeagoraproject@gmail.com</p>
+                <td class="text-right"><h5>zeagoraproject@gmail.com</h5>
                 </td>                                                         
               </tr> 
               <tr>
                 <td class="text-center">            
                   <h4> <i class="fa fa-phone mr-3"></i></h4>            
                 </td>
-                <td class="text-left"><p> 05 62 23 55 89</p>
+                <td class="text-right"><h5> 05 62 23 55 89</h5>
                 </td>                                                          
               </tr>
               <tr>
                 <td class="text-center">  
                   <h4> <i class="fa fa-map-marker" aria-hidden="true"></i></h4>
                 </td>
-                <td class="text-left"><p>22 rue des lauriers, 33000 Bordeaux</p>
+                <td class="text-right"><h5>22 rue des lauriers, 33000 Bordeaux</h5>
                 </td>                                                           
               </tr>                                                  
             </tbody>
@@ -59,7 +59,7 @@
     </div>
     <br><br>
     <div class="row">
-      <h2 class="text-center">Nous contacter</h2>
+      <h2 class="text-center">Nous connaitre</h2>
     </div>
     <br>
     <div class="row">
