--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,9 +15,8 @@
       <div class="col-md-4 col-sm-4">
         <h4 class=" mt-sm-3 text-white-footer">Nous connaître</h4>
         <p><a href="/contact" class="text-white-footer">À propos</a></p>
-        <p><a href="#" class="text-white-footer">Mentions légales </a></p>
+        <p><a href="/legal" class="text-white-footer">Mentions légales </a></p>
         <p><a href="/policy" class="text-white-footer">Notre charte</a></p>
-        <p><a href="#" class="text-white-footer">Politique de confidentialité</a></p>
         <p><a href="#" class="text-white-footer">FAQ</a></p>
       </div>
       <div class="col-md-4 col-sm-4">
