--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -22,29 +22,30 @@
   <div class="row featurette">
     <div class="col-md-7 order-md-1">
       <h2 class="featurette-heading">Proposez <i class="material-icons idea-icon" style="font-size: 33px">wb_incandescent</i></h2>
-      <p class="lead text-home">Une idée vous inspire depuis longtemps ? Sur Agora, vous êtes libres de la montrer à vos concitoyens. Nous veillons à ce que les propositions les plus pertinentes soient présentes.</p>
+      <h5>Une idée vous inspire depuis longtemps ? Sur Agora, vous êtes libres de la montrer à vos concitoyens. Nous veillons à ce que les propositions les plus pertinentes soient présentes.</h5>
     </div>
     <div class="col-md-5 order-md-1 img-center">
-      <%= image_tag("idea.svg", style: "width:75%;") %>
+      <%= image_tag("idea.svg", style: "width:65%;") %>
     </div>
   </div>
+  <br><br>
   <div class="row featurette">
     <div class="col-md-5 col-lg-7 col-lg-push-5  ">
       <h2 class="featurette-heading">Votez  <i class="material-icons vote-icon" style="font-size: 33px">how_to_vote</i>
-        <p class="lead text-home">Chaque jour des citoyens comme vous réfléchissent à comment améliorer le quotidien de votre ville. Consultez et débattez des propositions ensemble!</p>
+        <h5>Chaque jour des citoyens comme vous réfléchissent à comment améliorer le quotidien de votre ville. Consultez et débattez des propositions ensemble!</h5>
     </div>
     <div class="col-md-7 col-lg-5 col-lg-pull-7 img-center">
-          <%= image_tag("voting.svg", style: "width:75%") %>
+          <%= image_tag("voting.svg", style: "width:65%") %>
       </div>    
     </div>
     <br><br>
     <div class="row featurette">
       <div class="col-md-7 order-md-1">
         <h2 class="featurette-heading">Agissez  <i class="material-icons group-icon" style="font-size: 33px">people</i></h2>
-        <p class="lead text-home">Sur Agora, le système de vote permet de faire ressortir les meilleures propositions. Quand l'idée a reçu assez de votes positifs, nos équipes vous mettent en relation avec les citoyens soutenant votre projet. </p>
+        <h5>Sur Agora, le système de vote permet de faire ressortir les meilleures propositions. Quand l'idée a reçu assez de votes positifs, nos équipes vous mettent en relation avec les citoyens soutenant votre projet. </h5>
       </div>
       <div class="col-md-5 order-md-2 img-center">
-        <%= image_tag("group.svg", style: "width:80%") %>
+        <%= image_tag("group.svg", style: "width:70%") %>
       </div>
     </div>
   </div>
@@ -59,7 +60,7 @@
               <h4 class="timeline-title">Rassemblez-vous !</h4>
             </div>
             <div class="timeline-body">
-              <p>Le grand moment est arrivé ! À partir de 100 votes positifs, votre proposition est validée et nous vous mettons en relation avec toux ceux qui ont soutenus votre projet.</p>
+              <h5>Le grand moment est arrivé ! À partir de 100 votes positifs, votre proposition est validée et nous vous mettons en relation avec toux ceux qui ont soutenus votre projet.</h5>
             </div>
           </div>
         </li>
@@ -70,7 +71,7 @@
               <h4 class="timeline-title">Créez votre association</h4>
             </div>
             <div class="timeline-body">
-              <p>Selon la taille de votre projet, vous aurez besoin de créer une association à but non-lucrative.</p>            
+              <h5>Selon la taille de votre projet, vous aurez besoin de créer une association à but non-lucrative.</h5>            
             </div>
           </div>
         </li>
@@ -81,7 +82,7 @@
               <h4 class="timeline-title">Montez votre dossier</h4>
             </div>
             <div class="timeline-body">
-              <p>Pour être prise en compte par la mairie, votre projet devra être présenté sous forme de dossier.</p>
+              <h5>Pour être prise en compte par la mairie, votre projet devra être présenté sous forme de dossier.</h5>
             </div>
           </div>
         </li>
@@ -92,7 +93,7 @@
               <h4 class="timeline-title">Rendez le monde meilleur </h4>
             </div>
             <div class="timeline-body">
-              <p>Votre idée a amélioré le quotidien de vos concitoyens et rendu votre ville encore plus belle. Bravo ! </p>
+              <h5>Votre idée a amélioré le quotidien de vos concitoyens et rendu votre ville encore plus belle. Bravo ! </h5>
             </div>
           </div>
         </li>
@@ -177,7 +178,7 @@
       <%end%>
     </div>
     <div class="col-md-5 img-group">
-      <%= image_tag("community.svg", style: "width:100%") %>
+      <%= image_tag("community.svg", style: "width:90%") %>
     </div>
   </div>
 </div>
