add comment proposal for expired or vazlidated

--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -88,10 +88,12 @@
                   <div class="alert alert-warning">
                     <p class="text-center">Expirée</p>
                   </div>    
+                  <p class="text-muted text-center">Cette proposition a atteint la date d'expiration</p>    
                 <%else%> 
                   <div class="alert alert-info">
                     <p class="text-center">Validée</p>
                   </div>
+                  <p class="text-muted text-center">Cette proposition a atteint les 5 votes, une action est en cours.</p> 
                 <%end%>
               <%end%>
             <% end %>
