change syntax for mailers views

--- a/app/views/proposal_mailer/confirmation_proposal.text.erb
+++ b/app/views/proposal_mailer/confirmation_proposal.text.erb
@@ -1,7 +1,9 @@
-Salut <%= @user.first_name %> !
+Bonjour <%= @user.first_name %> !
 ==========================================================
  
-Cet email t'informe que ta proposition a été acceptée par nos équipes. Tu peux désormais te rendre sur <%= link_to "Agora.com", @url %> pour la consulter et répondre aux commentaires des autres utilisateurs.
+Cet email vous informe que votre proposition a été acceptée par nos équipes. Vous pouvez désormais vous rendre sur <%= link_to "Agora.com", @url %> pour la consulter et répondre aux commentaires des autres utilisateurs.
+
+Encore bravo pour votre super idée et à très vite sur Agora !
 
 À très vite sur Agora !
 
