--- a/app/views/proposal_mailer/info_user.text.erb
+++ b/app/views/proposal_mailer/info_user.text.erb
@@ -1,10 +1,12 @@
-Merci pour ta proposition <%= @user.first_name %>!
+Merci pour votre proposition <%= @user.first_name %>!
 ==========================================================
  
-Avant de montrer ta proposition au monde entier nous devons vérifier quelle corresponde à notre chartre.
+Avant de partager votre idée avec le monde entier nous devons vérifier quelle corresponde à notre charte.
 
-Nous reviendrons vers toi très vite pour te notifier de son acceptation ou non.
+Nous reviendrons vers vous très vite pour vous notifier de son acceptation.
  
-Pour accéder à ton compte, connecte-toi via : <%= link_to "Agora.com", @url %>
+Pour accéder à votre compte, connectez-vous via : <%= link_to "Agora.com", @url %>
  
 À très vite sur Agora !
+
+L'équipe Agora.
