--- a/app/views/proposal_mailer/send_email_after_votes.html.erb
+++ b/app/views/proposal_mailer/send_email_after_votes.html.erb
@@ -4,11 +4,11 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Salut <%= @user.first_name %> !</h1>
+    <h1>Bonjour <%= @user.first_name %> !</h1>
       <p>
-        Cet email t'informe que ta proposition a été validée par la communauté. Tu peux désormais te rendre sur <%= link_to "Agora.com", @url %> pour la consulter et répondre aux commentaires des autres utilisateurs.
+        Cet email vous informe que votre proposition a été validée par la communauté. Vous pouvez toujours vous rendre sur <%= link_to "Agora.com", @url %> pour la consulter et répondre aux commentaires des autres utilisateurs.
       </p>
-       <p>Voici des liens utiles qui t'aideront à mettre en place ton projet :</p>
+       <p>Voici des liens utiles qui vous aideront à mettre en place votre projet :</p>
        <%= link_to "- Comment mettre en place une démocratie participative", @url1 %> 
        <br>
        <%= link_to "- Les démarches de participation citoyenne", @url2 %> 
@@ -25,15 +25,15 @@
        <br>
        <br>
        <br>
-      <p>
-        Tu peux désormais contacter les citoyens ayant votés pour ta proposition pour t'organiser avec eux. 
+     
+
       <br>
-        Nous t'envoyons en pièce jointe la liste des citoyens ayant soutenus ta proposition. N'hésite pas à prendre contact avec eux rapidement !
+        Nous vous envoyons en pièce jointe la liste des citoyens ayant soutenus votre proposition. N'hésitez pas à prendre contact avec eux rapidement !
       </p>
        
     <br>
       <p>
-        Encore bravo pour ta super idée et à très vite sur Agora !
+        Encore bravo pour votre super idée et à très vite sur Agora !
       </p>
     <p> L'équipe Agora. <p> 
   </body>
