--- a/app/views/proposal_mailer/send_email_after_votes.text.erb
+++ b/app/views/proposal_mailer/send_email_after_votes.text.erb
@@ -2,12 +2,12 @@ Mise en relation avec les utilisateur ayant votés pour votre proposition
 
 ========================================================
 
-                             Salut <%= @user.first_name %> !
+                             Bonjour <%= @user.first_name %> !
 
 
-Cet email t'informe que ta proposition a été validée par la communauté. Tu peux désormais te rendre sur <%= link_to "Agora.com", @url %> pour la consulter et répondre aux commentaires des autres utilisateurs.
- 
-Voici des liens utiles qui t'aideront à mettre en place ton projet :
+Cet email vous informe que votre proposition a été validée par la communauté. Vous pouvez toujours vous rendre sur <%= link_to "Agora.com", @url %> pour la consulter et répondre aux commentaires des autres utilisateurs.
+
+Voici des liens utiles qui vous aideront à mettre en place votre projet :
        
   <%= link_to "- Comment mettre en place une démocratie participative", @url1 %> 
  
@@ -24,9 +24,8 @@ Voici des liens utiles qui t'aideront à mettre en place ton projet :
   <%= link_to "- Exemple de dossier à monter", @url6 %> 
     
 
- Nous t'envoyons en pièce jointe la liste des citoyens ayant soutenus ta proposition. N'hésite pas à prendre contact avec eux rapidement !
+Nous vous envoyons en pièce jointe la liste des citoyens ayant soutenus votre proposition. N'hésitez pas à prendre contact avec eux rapidement !
 
-Encore bravo pour ta super idée et à très vite sur Agora !
+Encore bravo pour votre super idée et à très vite sur Agora !
       
-
 L'équipe Agora.
