--- a/app/views/proposal_mailer/confirmation_proposal.html.erb
+++ b/app/views/proposal_mailer/confirmation_proposal.html.erb
@@ -4,11 +4,11 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Salut <%= @user.first_name %> !</h1>
-      <p>Cet email t'informe que ta proposition a été acceptée par nos équipes. Tu peux désormais te rendre sur <%= link_to "Agora.com", @url %> pour la consulter et répondre aux commentaires des autres utilisateurs.
+    <h1>Bonjour <%= @user.first_name %> !</h1>
+      <p>Cet email vous informe que votre proposition a été acceptée par nos équipes. Vous pouvez désormais vous rendre sur <%= link_to "Agora.com", @url %> pour la consulter et répondre aux commentaires des autres utilisateurs.
       </p>
-      <p>Encore bravo pour ta super idée et à très vite sur Agora !
+      <p>Encore bravo pour votre super idée et à très vite sur Agora !
       </p>
-      <p> L'équipe Agora <p> 
+      <p> L'équipe Agora. <p> 
   </body>
 </html>
