--- a/app/views/proposal_mailer/info_user.html.erb
+++ b/app/views/proposal_mailer/info_user.html.erb
@@ -6,11 +6,13 @@
   <body>
     <h1>Merci d'avoir proposé une initiative sur Agora <%= @user.first_name %></h1>
    
-<p> Avant de montrer ta proposition au monde entier nous devons vérifier quelle corresponde à notre chartre.</p>
-<p> Nous reviendrons vers toi très vite pour te notifier de son acceptation ou non.
+<p> Avant de partager votre idée avec le monde entier nous devons vérifier quelle corresponde à notre charte.</p>
+<p> Nous reviendrons vers vous très vite pour vous notifier de son acceptation.
  <p>
-      Pour accéder à ton compte, connecte-toi via : <%= link_to "Agora.com", @url %>
+      Pour accéder à votre compte, connectez-vous via : <%= link_to "Agora.com", @url %>
     </p>
     <p> À très vite sur Agora !</p>
+
+    <p>L'équipe Agora.</p>
   </body>
 </html>
