--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,8 +1,10 @@
-Salut <%= @user.first_name %> et bienvenue chez nous !
+Bonjour <%= @user.first_name %> et bienvenue chez nous !
 ==========================================================
  
-Tu t'es inscrit sur Agora en utilisant l'e-mail suivant : <%= @user.email %>.
- 
-Pour accéder à ton compte, connecte-toi sur <%= link_to "Agora.com", @url %>
- 
+Vous vous êtes inscrit sur Agora en utilisant l'e-mail suivant : <%= @user.email %>.
+
+Pour accéder à votre compte, connectez-vous sur <%= link_to "Agora.com", @url %> 
+
 À très vite sur Agora !
+
+L'équipe Agora.
