--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -197,9 +197,9 @@
               <td></td>
               <td>
                 <%if x.picture.attached?%>
-                <%= image_tag x.picture, alt: "Card image", width: 170, style: "height: auto" %>
+                  <%= image_tag x.picture, alt: "Card image", width: 170, style: "height: auto" %>
                 <%else%>
-                <p>=Image=</p>
+                  <%= image_tag("no_picture.png", width: 170, style: "height: auto")%>
                 <%end%>
               </td>
               <td class="flex-column">
@@ -230,7 +230,7 @@
                 <%if Proposal.find(x.id).picture.attached?%>
                 <%= image_tag Proposal.find(x.id).picture, alt: "Card image",  width: 170, style: "height: auto"%>
                 <%else%>
-                <p>=Image=</p>
+                  <%= image_tag("no_picture.png", width: 170, style: "height: auto")%>
                 <%end%>                  
               </td>
               <td>
