add ajax to home page when vote and undo vote

--- a/app/views/cities/_jumbotron.html.erb
+++ b/app/views/cities/_jumbotron.html.erb
@@ -1,7 +1,7 @@
-<div class="container">
+<div id="jumbotron" class="container">
   <div class="row">
     <div class="col-md-7 city">
-      <h1 class="display-4">Les propositions citoyennes à <%=city.name%></h1>
+      <h1 class="display-4">Les propositions citoyennes à <%= city.name %></h1>
       <p class="lead">Retrouvez les meilleures propositions du moment ci-dessous</p>
     </div>
     <div class="col-md-5 city">
