--- a/app/views/cities/_my_city.html.erb
+++ b/app/views/cities/_my_city.html.erb
@@ -33,43 +33,8 @@
               <table class="table table-responsive table-full-width">
                 <tbody>
                   <% proposals.each do |x| %>
-                    <%if (x.differencebetween == false) && x.votes_count < 5%>
-                      <tr>
-                        <td></td>
-                        
-                        <td>
-                          <%if x.picture.attached?%>
-                            <%= image_tag x.picture, alt: "Card image", width: 170, style: "height: auto" %>
-                          <%else%>
-                            <%= image_tag("no_picture.png", width: 170, style: "height: auto")%>
-                          <%end%>
-                        </td>
-                        <td>
-                          <h4 class='text-wrap'><%= x.title %></h4>
-                          <% t = (Time.now- (x.created_at+(60*60*24*30)))%>
-                          <p class='text-muted' style='font-style: italic;'> Il reste : <%= ((t.to_i)/(60*60*24)).abs %> jours pour voter</p>
-                          <a class="btn btn-primary btn-round btn-sm" href= "/proposals/<%=x.id%>" role="button">
-                            <i class="material-icons" style="font-size: 15px">visibility</i> Voir la proposition
-                          </a>
-                          <a class="btn btn-primary btn-round btn-sm" href= "/proposals/<%=x.id%>" role="button">
-                            <i class="material-icons" style="font-size: 15px">mode_comment</i> <%=x.comments.count%>
-                          </a>
-                          <span class="badge badge-primary"><%= x.category.name %></span>
-                        </td>
-                          <td class='text-center'>
-                            <%if x.vote_of(current_user)%>
-                              <%= link_to "<i class='material-icons' style='font-size: 19px'>sentiment_satisfied_alt</i> A voté !".html_safe, proposal_vote_path(x.id, x.vote_of(current_user).id), :class => "btn btn-success btn-md", method: :delete%>
-                            <%else%>
-                              <%= link_to "<i class='material-icons' style='font-size: 19px'>how_to_vote</i> Je vote".html_safe, proposal_votes_path(x.id), :class => "btn btn-primary btn-md", method: :post%>
-                            <%end%>
-                            <%if x.votes_count>1%>
-                              <h5> <%=x.votes_count%> votes</h5>
-                            <%else%>
-                              <h5> <%=x.votes_count%> vote</h5>
-                            <%end%>
-                          </td>
-                        <td><td>
-                      </tr>
+                    <%if (x.differencebetween == false) && (x.votes_count < 5) %>
+                      <%= render 'ongoing_proposal', x: x %>
                     <%end%>
                   <%end%>
                 </tbody>
@@ -96,39 +61,8 @@
               <table class="table table-responsive table-full-width">
                 <tbody>
                   <% proposals.each do |x| %>
-                    <%if (x.differencebetween == true) ||  x.votes_count >= 5%>
-                    <tr>
-                      <td></td>
-                      
-                      <td>
-                        <%if x.picture.attached?%>
-                          <%= image_tag x.picture, alt: "Card image", width: 170, style: "height: auto" %>
-                        <%else%>
-                          <p>=Image=</p>
-                        <%end%>
-                      </td>
-                      <td>
-                        <h4 class='text-wrap'><%=x.title %></h4>
-                        <a class="btn btn-primary btn-round btn-sm" href= "/proposals/<%=x.id%>" role="button">
-                          <i class="material-icons" style="font-size: 15px">visibility</i> Voir la proposition
-                        </a>
-                        <span class="badge badge-primary"><%= x.category.name %></span>
-                      </td>
-                      <td>
-                        <%if (x.differencebetween == true) %>
-                          <div class="alert alert-warning">
-                            <p class="text-center">Expirée</p>
-                          </div>   
-                          <p class="text-muted text-center">Cette proposition a atteint la date d'expiration</p>    
-                        <%elsif x.votes_count >= 5%> 
-                          <div class="alert alert-info">
-                            <p class="text-center">Validée</p>
-                          </div>
-                          <p class="text-muted text-center">Cette proposition a atteint les 5 votes!</p> 
-                        <%end%>
-                      <td>
-                    </tr>
-                    <%else%>
+                    <% if (x.differencebetween == true) || (x.votes_count >= 5) %>
+                      <%= render 'completed_proposal', x: x %>
                     <%end%>
                   <%end%>
                 </tbody>
