AJAX for like and unlike proposal comments

--- a/app/views/cities/_filter.html.erb
+++ b/app/views/cities/_filter.html.erb
@@ -1,7 +1,7 @@
 <div id="filter" class="container">
   <div class="row">
     <div class="col-xs col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-      <div class="card">
+      <div class="card box">
         <div class="card-header card-header-icon" data-background-color="blue">
           <i class="material-icons">filter_alt</i>
         </div>
