--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -1,134 +1,2 @@
-<div id=<%= @proposal.id %> class="my-proposal container">
-  <br>
-  <h3><b>La proposition</b></h3>
-  <br>
-  <br>
-  <div class="row">
-    <div class="col-md-6 text-wrap text-justify">
-      <div class="card card-product">
-        <%if @proposal.picture.attached?%>
-          <div class="card-image" data-header-animation="true">
-            <%= image_tag @proposal.picture, alt: 'Picture', style: "height: 50vh;" %>
-          </div>
-        <%else%>
-          <div class="card-image" data-header-animation="true">
-            <%= image_tag("no_picture.png", style: "height: 50vh;")%>
-          </div>
-        <%end%>
-        <div class="card-header">
-          <h4 class="card-title"><%= @proposal.title %><br>
-            <div class='flex-row-center'>
-              <%= link_to "#{@proposal.city.name}", city_path(@proposal.city.id), class: 'btn btn-primary btn-round btn-xs' %>
-              <span class="badge badge-primary"><%= @proposal.category.name %></span>
-            </div>
-          </h4>
-        </div>
-        <div class="card-content">
-          <ul class="nav nav-pills nav-pills-warnin">
-            <li class="active primary">
-              <a href="#pill1" data-toggle="tab">Problème adressé</a>
-            </li>
-            <li>
-              <a href="#pill2" data-toggle="tab">Solution proposée</a>
-            </li>
-          </ul>
-          <div class="tab-content">
-            <div class="tab-pane active" id="pill1">
-              <%= @proposal.purpose %>
-            </div>
-            <div class="tab-pane" id="pill2">
-              <%= @proposal.description %>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class='col-md-1'></div>
-    <div class="col-md-5">
-      <div class="col">
-        <div class="card card-testimonial">
-          <div class="card-content">
-            <h5 class="text-muted" style="margin-bottom: 2px">Une proposition de</h5>
-            <h6 class="card-title" style="margin-bottom: 0px"><%= @proposal.user.first_name %> <%= @proposal.user.last_name %></h6>
-            <small class='text-muted' style='font-style: italic;'> Crée le <%= @proposal.created_at.strftime('%d/%m/%Y') %></small>
-            <div>
-              <% if is_current_user_owner_of?(@proposal) %>
-                <button id="tweet-btn" class="btn btn-simple btn-twitter" style="margin-top: 0px; margin-bottom: 0px">
-                  <i class="fa fa-twitter"></i> Tweeter ma proposition
-                </button><br>
-                <small class="text-muted">Besoin d'éditer ta proposition ? Ecrivez au support Agora !</small><br>
-                <a class="btn btn-primary btn-xs" href="mailto: zeagoraproject@gmail.com" role="button">Ecrire au support</a>
-              <% end %>
-            </div>
-          </div>
-          <div class="footer">
-            <% if @proposal.user.avatar.attached? %>
-              <div class="card-avatar">
-                <%= image_tag @proposal.user.avatar, alt: 'Picture', style: "width: 100%;height: auto;" %>
-              </div>
-            <% else %>
-              <div class="card-avatar">
-                <%= image_tag("avatar.png", style: "width:100%; height: auto;")%> 
-              </div>
-            <% end %>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card" style="padding-bottom: 0px;">
-          <div class="card-content text-center">
-            <% unless is_current_user_owner_of?(@proposal) %>
-              <%if (@proposal.differencebetween == false) && @proposal.votes_count < 5 %>
-                <% t = (Time.now- (@proposal.created_at+(60*60*24*30)))%>
-                <h5 class="text-muted" style='margin-bottom: 0px;'>Votez pour cette proposition</h5>
-                <p class='text-muted' style='font-style: italic; margin-top: 0px'> Il reste : <%= ((t.to_i)/(60*60*24)).abs %> jours pour voter</p>
-                <%if @proposal.vote_of(current_user)%>
-                  <%= link_to '<i class="material-icons" style="font-size: 19px">sentiment_satisfied_alt</i> A voté'.html_safe, proposal_vote_path(@proposal.id, @proposal.vote_of(current_user).id), :class => "btn btn-success", method: :delete %>
-                <%else%>
-                  <%= link_to '<i class="material-icons" style="font-size: 19px">how_to_vote</i> Je vote'.html_safe, proposal_votes_path(@proposal.id), :class => "btn btn-primary", method: :post %>
-                <%end%>
-              <%else%>
-                <%if (@proposal.differencebetween == true) %>
-                  <div class="alert alert-warning">
-                    <p class="text-center">Expirée</p>
-                  </div>    
-                  <p class="text-muted text-center">Cette proposition a atteint la date d'expiration</p>    
-                <%else%> 
-                  <div class="alert alert-info">
-                    <p class="text-center">Validée</p>
-                  </div>
-                  <p class="text-muted text-center">Cette proposition a atteint les 5 votes, une action est en cours.</p> 
-                <%end%>
-              <%end%>
-            <% end %>
-            <%if @proposal.votes_count >1 %>
-              <h5><%= @proposal.votes_count %> VOTES</h5>
-            <%else%>
-              <h5><%= @proposal.votes_count %> VOTE </h5>
-            <%end%>
-          </div>
-          <% unless @proposal.votes_count == 0 %>
-            <div class="card-footer" style="padding-top: 0px;  margin-bottom: 0px;">
-              <div class="price">
-                <small class="flex-row"><i class="material-icons">upgrade</i> <span>Classement général : <%= @proposal.general_classification %></span></small>
-                <small class="flex-row"><i class="material-icons">upgrade</i> <span>Classement catégorie <%= @proposal.category.name %> : <%= @proposal.category_classification %></span></small>
-              </div>
-            </div>
-          <% end %>
-        </div>
-      </div>
-      <div class="col">
-        <% if user_signed_in? %>
-          <% if is_current_user_admin? %>
-            <%= form_tag proposal_pictures_path(@proposal), multipart: true do %>
-              <%= file_field_tag :picture %>
-              <%= submit_tag "Mettre à jour" %>
-            <% end %>
-          <% end %>
-        <% end %>
-      </div>
-    </div>
-  </div>
-</div>
-
-<%= render "proposals/debate"%>
+<%= render 'proposal_details' %>
+<%= render 'debate' %>
