--- a/app/views/cities/_my_city.html.erb
+++ b/app/views/cities/_my_city.html.erb
@@ -28,17 +28,19 @@
       <h3><b>Les propositions en cours : votez pour vos propositions préférées !</b></h3>
       <div class="row">
         <div class="col">
-          <div class="card">
+          <div class="card box">
             <div class="card-content">
-              <table class="table table-responsive table-full-width">
-                <tbody>
-                  <% proposals.each do |x| %>
-                    <%if (x.differencebetween == false) && (x.votes_count < 5) %>
-                      <%= render 'ongoing_proposal', x: x %>
+              <div class="table-responsive">
+                <table class="table">
+                  <tbody>
+                    <% proposals.each do |x| %>
+                      <%if (x.differencebetween == false) && (x.votes_count < 5) %>
+                        <%= render 'ongoing_proposal', x: x %>
+                      <%end%>
                     <%end%>
-                  <%end%>
-                </tbody>
-              </table>
+                  </tbody>
+                </table>
+              </div>
             </div>
           </div>
         </div>
@@ -56,17 +58,19 @@
       <h3><b>Les propositions terminées :</b></h3>
       <div class="row">
         <div class="col">
-          <div class="card">
+          <div class="card box">
             <div class="card-content">
-              <table class="table table-responsive table-full-width">
-                <tbody>
-                  <% proposals.each do |x| %>
-                    <% if (x.differencebetween == true) || (x.votes_count >= 5) %>
-                      <%= render 'completed_proposal', x: x %>
+              <div class="table-responsive">
+                <table class="table">
+                  <tbody>
+                    <% proposals.each do |x| %>
+                      <% if (x.differencebetween == true) || (x.votes_count >= 5) %>
+                        <%= render 'completed_proposal', x: x %>
+                      <%end%>
                     <%end%>
-                  <%end%>
-                </tbody>
-              </table>
+                  </tbody>
+                </table>
+              </div>
             </div>
           </div>
         </div>
