--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -227,7 +227,7 @@
             <tr>
               <td></td>
               <td>
-                <%if Proposal.find(x.id).picture.attached?%>
+                <%if x.picture.attached?%>
                 <%= image_tag Proposal.find(x.id).picture, alt: "Card image",  width: 170, style: "height: auto"%>
                 <%else%>
                   <%= image_tag("no_picture.png", width: 170, style: "height: auto")%>
@@ -252,7 +252,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <h3 class="display-4 text-white"><b>D'autres villes sont disponibles sur Agora! N'hésitez pas à les consulter!</b></h3>
+      <h3 class="display-4 text-white"><b>D'autres villes sont disponibles sur Agora ! N'hésitez pas à les consulter !</b></h3>
       <div class="dropdown">
         <button href="#" class="btn dropdown-toggle btn-primary btn-lg" data-toggle="dropdown" aria-expanded="true" >
           <i class="material-icons">home</i>  Les villes disponibles
