--- a/app/views/proposals/new.html.erb
+++ b/app/views/proposals/new.html.erb
@@ -1,7 +1,7 @@
 <br>
 <div class = container>
   <div class="col-md-12">
-    <div class="card">
+    <div class="card box">
       <%= form_for @proposal do |f| %>
         <div class="card-header card-header-text" data-background-color="blue">
           <h4 class="card-title">Proposez une initiative à <%= @city %></h4>
