--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,7 +10,7 @@
         </div>
       </div>
     </div>
-    <div class="card">
+    <div class="card box">
       <div class="card-header card-header-icon" data-background-color="blue">
         <i class="material-icons">perm_identity</i>
       </div>
@@ -33,7 +33,7 @@
             </div>
           </div>
         </div>
-         <div class="row">
+        <div class="row">
           <label class="col-md-3 label-on-left">  <%= f.label :city, "Ville" %></label>                                            
           <div class="col-md-9">
             <div class="form-group is-empty">
@@ -58,7 +58,7 @@
 <div class="container">
   <div class="col-md-3"></div>
   <div class="col-md-6">
-    <div class="card">
+    <div class="card box">
       <div class="card-header card-header-icon" data-background-color="blue">
         <i class="material-icons">photo</i>
       </div>
