--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 <br>
 <div class="container" style="width: 35em;">
   <div class="row justify-content-center">
-    <div class="card card-profile">
+    <div class="card card-profile box">
         <%if @user.avatar.attached?%>
         <div class="card-avatar">
           <%= image_tag @user.avatar, alt: 'Avatar' , style: "width: 100%;height: auto;"%>
@@ -34,7 +34,7 @@
       <br>
       <br>
       <div class="col">
-        <div class="card">
+        <div class="card box">
           <div class="card-header card-header-text" data-background-color="blue">
             <h4 class="card-title">Mes propositions</h4>
           </div>
