--- a/app/views/proposals/_proposal_comments.html.erb
+++ b/app/views/proposals/_proposal_comments.html.erb
@@ -3,59 +3,7 @@
       <table class="table table-responsive text-wrap">
         <tbody>
           <% comments.each do |x| %>
-            <tr>
-              <td>
-                <b>
-                <div class="avatar">
-                  <h5><b><i class="material-icons" style="font-size: 17px">face</i> <%=" "%><%=x.user.first_name%><%=" "%><%=x.user.last_name%>
-                  <%if x.user.id == x.proposal.user.id %>
-                    <span class="badge badge-primary">Initiateur</span>
-                  <%end%>
-                  </b><h5>
-                </div>
-                </b>
-                <p><%= x.content %></p>
-                <em class='text-muted'>Message posté le <%= x.created_at.to_formatted_s(:short )%> -</em>
-                <%if user_signed_in?%>
-                  <%if current_user.id != x.user.id%>
-                    <%if Like.where(user_id: current_user.id, comment_id: x.id).any? %>
-                      <%= link_to "Aimé (#{Like.where(comment_id: x.id).count})", proposal_comment_like_path(proposal.id, x.id, Like.where(user_id: current_user.id, comment_id: x.id).first.id ), class: 'btn btn-success btn-xs',method: :delete, remote: true %>
-                    <%else%>
-                      <%= link_to "J'aime (#{Like.where(comment_id: x.id).count})", proposal_comment_likes_path(proposal.id, x.id), class: 'btn btn-primary btn-xs',method: :post, remote: true %>              
-                    <%end%>
-                  <%end%>
-                <%end%>
-                <%if user_signed_in?%>
-                  <%if current_user.id == x.user.id %>
-                    <%= link_to 'effacer',proposal_comment_path(proposal.id, x.id), class: 'btn btn-danger btn-xs',method: :delete %> <span class='label label-success' style='font-weight: normal;'><%= x.likes.count %> AIMES</span>
-                  <%end%>
-                <%end%>
-                <div class = "container">
-                  <div class="row">
-                    <div class="col-xs-11 col-xs-offset-1">
-                      <% x.comments.each do |y| %>
-                        <br><b><i class="material-icons" style="font-size: 17px">face</i> <%=" "%><%= y.user.first_name%><%=" "%><%= y.user.last_name%></b><br><br>
-                        <%= y.content%><br><br>
-                        <small class='text-muted' style='font-style: italic;'>Message posté le <%= y.created_at.to_formatted_s(:short) %></small>
-                        <%if user_signed_in?%>
-                          <%if current_user.id == y.user.id %>
-                            <%= link_to 'effacer',proposal_comment_path(proposal.id, y.id), class: 'btn btn-danger btn-xs',method: :delete %>
-                          <%end%>
-                        <%end%>
-                        <br><br>
-                      <%end%>
-                      <%if user_signed_in?%>
-                        <%=form_tag url_for(proposal_comment_comments_path(proposal.id, x.id)) do %> 
-                          <%= label_tag "Répondre à #{x.user.first_name}" %>
-                          <p><%= text_field_tag 'content',"", {class: 'form-control border'} %></p>
-                          <%=submit_tag "Envoyer", {class: 'btn btn-primary btn-sm'}%>
-                        <%end%>
-                      <%end%>
-                    </div>
-                  </div>
-                </div>
-              </td> 
-            </tr>
+            <%= render 'proposal_comment', x: x, proposal: proposal %>
           <%end%>
         </tbody>
       </table>
