fixing bugs general

--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -155,9 +155,7 @@
             <h4 class="card-title">Marie Brun</h4>
             <h6 class="category">@mariebrun</h6>
             <div class="card-avatar">
-              <a href="">
-                <img src="https://images.unsplash.com/photo-1570840934347-4dc56c98b8ef?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" style="width: 100%;height: auto;" class="img-profile">
-              </a>
+              <%= image_tag("marie.jpeg", style: "width: 100%;height: auto") %>
             </div>
           </div>
         </div>
