--- a/app/views/proposals/new.html.erb
+++ b/app/views/proposals/new.html.erb
@@ -4,7 +4,7 @@
     <div class="card box">
       <%= form_for @proposal do |f| %>
         <div class="card-header card-header-text" data-background-color="blue">
-          <h4 class="card-title">Proposez une initiative à <%= @city %></h4>
+          <h4 class="card-title">Proposez une initiative à <%= @cityuser %></h4>
         </div>
         <div class="card-content">
           <div class="row">
