--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -154,9 +154,9 @@
           <div class="footer">
             <h4 class="card-title">Marie Brun</h4>
             <h6 class="category">@mariebrun</h6>
-            <div class="card-avatar">
-              <%= image_tag("marie.jpeg", style: "width: 100%;height: auto") %>
-            </div>
+          <div class="card-avatar">
+            <%= image_tag("alexis.jpg", style: "width: 100%;height: auto") %>
+          </div>
           </div>
         </div>
       </div>
