--- a/app/views/proposals/_debate.html.erb
+++ b/app/views/proposals/_debate.html.erb
@@ -11,5 +11,5 @@
     <p>Pensez à vous connecter pour participer au débat ;)</p>
   <%end%>
   <br>
-  <%= render 'proposal_comments', comments: @comments, proposal: @proposal %>
+  <%= render 'proposals/proposal_comments', comments: @comments, proposal: @proposal %>
 </div>
