--- a/app/views/cities/_vote_informations.html.erb
+++ b/app/views/cities/_vote_informations.html.erb
@@ -6,7 +6,7 @@
       <%= link_to "<i class='material-icons' style='font-size: 19px'>how_to_vote</i> Je vote".html_safe, city_proposal_votes_path(x.city.id, x.id), :class => "btn btn-primary btn-md", id: 'create-btn', method: :post, remote: true %>
     <%end%>
   <% else %>
-    <p class='text-muted' style='font-style: italic;'>Vous ne pouvez pas voter pour ta proposition</p>
+    <p class='text-muted' style='font-style: italic;'>Vous ne pouvez pas voter pour votre proposition</p>
   <% end %>
   <%if x.votes_count>1%>
     <h5> <%= x.votes_count %> votes</h5>
