--- a/app/views/cities/_ongoing_proposal.html.erb
+++ b/app/views/cities/_ongoing_proposal.html.erb
@@ -19,5 +19,5 @@
     </a>
     <span class="badge badge-primary"><%= x.category.name %></span>
   </td>
-  <%= render 'vote_informations', x: x %>
+  <%= render 'cities/vote_informations', x: x %>
 </tr>
