--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -1,4 +1,4 @@
-<%= render 'jumbotron', city: @city %>
+<%= render 'cities/jumbotron', city: @city %>
 <br><br><br><br><br>
-<%= render 'filter', categories: @categories %>
-<%= render 'my_city', city: @city, proposals: @proposals %>
+<%= render 'cities/filter', categories: @categories %>
+<%= render 'cities/my_city', city: @city, proposals: @proposals %>
