--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -1,2 +1,2 @@
-<%= render 'proposal_details' %>
-<%= render 'debate' %>
+<%= render 'proposals/proposal_details' %>
+<%= render 'proposals/debate' %>
