--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,5 +1,5 @@
 <p>Bonjour <%= @resource.email %>,</p>
-<p>Nous t'informons que ton mot de passe a été modifié.</p>
+<p>Nous vous informons que votre mot de passe a été modifié.</p>
 <br>
 <p>L'équipe Agora</p>
 
