--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
 <p>Bonjour <%= @resource.email %>,</p>
-<p>Tu as fait une demande pour changer ton mot de passe. Vas sur le lien suivant pour le modifier : </p>
+<p>Vous avez fait une demande pour changer votre mot de passe. Allez sur le lien suivant pour le modifier : </p>
 <p><%= link_to 'Changer mon mot de passe', edit_password_url(@resource, reset_password_token: @token) %></p>
-<p>Si tu ne veux pas changer de mot de passe, ignore ce message.</p>
-<p>Ton mot de passe ne changera pas tant que les modifications n'auront pas été sauvegardées sur ce lien.</p>
+<p>Si vous ne voulez pas changer de mot de passe, ignorez ce message.</p>
+<p>Votre mot de passe ne changera pas tant que les modifications n'auront pas été sauvegardées sur ce lien.</p>
 <br>
 <p>L'équipe Agora</p>
 
