change button text

--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -7,7 +7,7 @@
       <% if user_signed_in? %>
       <p><%= link_to 'Proposer mon idée', new_proposal_path, class: 'btn btn-primary btn-lg' %></p>
       <%else%>
-      <p><a class="btn btn-primary btn-lg" href="/users/sign_in" role="button">Je veux créer ma proposition</a></p>
+      <p><a class="btn btn-primary btn-lg" href="/users/sign_in" role="button">Proposer mon idée</a></p>
       <%end%>
     </div>
     <div class="col-md-6 order-md-2 img-top">
@@ -172,7 +172,7 @@
       <% if user_signed_in? %>
       <p><%= link_to 'Proposer mon idée', new_proposal_path, class: 'btn btn-primary btn-lg' %></p>
       <%else%>
-      <p><a class="btn btn-primary btn-lg" href="/users/sign_in" role="button">Je veux créer ma proposition</a></p>
+      <p><a class="btn btn-primary btn-lg" href="/users/sign_in" role="button">Proposer mon idée</a></p>
       <%end%>
     </div>
     <div class="col-md-5 img-group">
