add default photo to proposal

--- a/app/views/cities/_ongoing_proposal.html.erb
+++ b/app/views/cities/_ongoing_proposal.html.erb
@@ -4,7 +4,7 @@
     <%if x.picture.attached?%>
       <%= image_tag x.picture, alt: "Card image", width: 170, style: "height: auto" %>
     <%else%>
-      <p>=Image=</p>
+      <%= image_tag ("home.jpg"), width: 170, style: "height: auto" %>
     <%end%>
   </td>
   <td>
