--- a/app/views/proposals/_proposal_details.html.erb
+++ b/app/views/proposals/_proposal_details.html.erb
@@ -12,7 +12,7 @@
           </div>
         <%else%>
           <div class="card-image" data-header-animation="true">
-            <%= image_tag("no_picture.png", style: "height: 50vh;")%>
+            <%= image_tag("home.jpg", style: "height: 50vh;")%>
           </div>
         <%end%>
         <div class="card-header">
