changing message status

--- a/app/views/proposals/_proposal_vote_informations.html.erb
+++ b/app/views/proposals/_proposal_vote_informations.html.erb
@@ -23,12 +23,14 @@
             <div class="alert alert-warning">
               <p class="text-center">Expirée</p>
             </div>    
-            <p class="text-muted text-center">Cette proposition a atteint la date d'expiration</p>    
+            <p class="text-muted text-center">Cette proposition n'a pas reçu le nombre de votes suffisant pour être validée avant la date limite.</p>
+            <p class="text-muted text-center">Merci pour ta proposition <%= @proposal.user.first_name %>! </p>    
           <%else%> 
             <div class="alert alert-info">
               <p class="text-center">Validée</p>
             </div>
-            <p class="text-muted text-center">Cette proposition a atteint les 5 votes, une action est en cours.</p> 
+            <p class="text-muted text-center">Cette proposition a reçu le nombre de votes minimum pour passer à l'action! <%= @proposal.user.first_name %> a été mise en relation avec les votants.</p>
+            <p class="text-muted text-center"> Bravo <%= @proposal.user.first_name %>! </p> 
           <%end%>
         <%end%>
       <% else %>  
